# opencv_toy

./: CMakeLists.txt
src/: main.cpp
